<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="716dp"
        tools:context=".Profile_User">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/avatar"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nama"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_avatar"
            style="@style/bigTitles1"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            style="@style/headlines1"/>

        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/repository"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/username"
            style="@style/BigTitles3"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:text="Repository"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/repository"
            style="@style/headlines2"/>

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/followers"
            card_view:layout_constraintEnd_toStartOf="@+id/following"
            card_view:layout_constraintHorizontal_bias="0.463"
            card_view:layout_constraintStart_toEndOf="@+id/repository"
            card_view:layout_constraintTop_toBottomOf="@+id/username"
            style="@style/BigTitles3"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="followers"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/followers"
            style="@style/headlines2"/>

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:text="@string/following"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/username"
            style="@style/BigTitles3"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="75dp"
            android:text="following"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/following"
            style="@style/headlines2"/>

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/bio"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_avatar"
            style="@style/BigTitles4"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="23dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/bio"
            card_view:srcCompat="@drawable/ic_baseline_work_24" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="23dp"
            android:text="@string/company"
            card_view:layout_constraintStart_toEndOf="@+id/imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/bio"
            style="@style/BigTitles4"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="15dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imageView"
            card_view:srcCompat="@drawable/ic_baseline_location_on_24"
            style="@style/BigTitles4"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            card_view:layout_constraintStart_toEndOf="@+id/imageView2"
            card_view:layout_constraintTop_toBottomOf="@+id/company"
            style="@style/BigTitles4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>